--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 
 ```
 
-<img src="Www/soldi.png" alt="drawing" width="139"/>
+<img src="www/soldi.png" alt="drawing" width="139"/>
     
   
 ## Deployment happens
