--- a/README.Rmd
+++ b/README.Rmd
@@ -1,65 +1,101 @@
 ---
-title: "Calcola_Finanziamento"
-author: "Niccolò Salvini"
-date: "27/4/2020"
-output: rmarkdown::github_document
+output: 
+  rmarkdown:: github_document
+  toc: true
+# bibliography: references.bib
 ---
 
-```{r, echo = FALSE, message=FALSE}
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+
+# Calcola Finanziamento <img src="imgRmd/logo.png" align="right" height="80" />
+_author_: **[Niccolò Salvini](https://niccolosalvini.netlify.app/)** 
+
+_date_: `r Sys.Date()`
+
+
+```{r global.options, include=FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-"
+  warning = FALSE,  
+  strip.white = TRUE,     # if FALSE knitr will not remove white spaces at the beg or end
+  fig.path = "img/",      # file path to the directory DESTINATION where knitr shall store the
+  fig.width=12,           # the width for plots created by code chunk
+  fig.height=8,           # the height for plots created by code chunk
+  cache = FALSE           # if TRUE knitr will cache the results to reuse in future knits
 )
+
+
+knitr::knit_hooks$set(imgcenter = function(before, options, envir){  # to center image 
+  if (before) {                                                      # add imgcenter = TRUE
+    htmltools::HTML("<p align='center'>")                            # to the chunk options
+  } else {
+    htmltools::HTML("</p>")
+  }
+})
+
 
 ```
 
-<img src="www/soldi.png" alt="drawing" width="139"/>
-    
-  
+<br> <br> 
+
 ## Deployment happens
-On the shiny sever <span style="font-size:larger;">[`HERE`](http://niccolosalvini.shinyapps.io/calcola_finanziamento)</span>
 
+On the shiny sever
+<span style="font-size:larger;">[`HERE`](http://niccolosalvini.shinyapps.io/calcola_finanziamento)</span>
 
-## Description
-I noticed that people in the business of assessing _usury_ are using old tools such as Excel and 90' visualization, not even interactive. The point is to make it easier to non technicals to percieve the differences among appling different mortages schemes.
-  
-I have 2 configurations for mortages:
+## Description:
+
+I noticed that people in the business of assessing *usury* are using old
+tools such as Excel and 90’ visualization, not even interactive. The
+point here is to make it easier to non-technical people to percieve the differences
+among different mortages schemes.
+
+I have implements 2 loans configurations:
 
   - italiano
-  
+
   - francese
 
 I have 2 configuations for interest rates.
 
   - simple
-    
+
   - composed
 
 ## Visuals
 
-![img1](imgRmd/img1.PNG)
-![img2](imgRmd/img2.gif)
+```{r graphics, echo=FALSE, imgcenter = TRUE}
+knitr::include_graphics("imgRmd/img1.PNG") 
+```
 
-## Usage
-You just need to type data from you financial summary, such as the total amount for the moratge, years according to which you have to repy it, the type of payment (3 months, 6 months, whatever), and all the other info required to compute a term structure.
+```{r graphics1, echo=FALSE, imgcenter = TRUE}
+knitr::include_graphics("imgRmd/img2.gif") 
+```
+
+## Usage:
+
+You just need to type data from you financial summary, such as the total
+amount for the moratge, years according to which you have to repy it,
+the type of payment (3 months, 6 months, whatever), and all the other
+info required to compute a term structure.
+
+## Project status:
+
+The project is not finished yet. But it is still deployed and you can
+play with numbers and interests. **in ITINERE**
+
+## Next features:
+
+1.  mettere griglia di importanti indicatori per finanziamento
+2.  TAEG
+3.  costi di inizio pratica
+4.  ammoratamento tedesco e restituzione unica
+5.  ottimizzazione performance tramite reactive dentro server
+6.  mettere serie storica tassi completa
 
 
-## Project status
-The project is not finished yet. But it is still deployed and you can play with numbers and interests. __in ITINERE__
+## License:
 
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Quest'opera è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribuzione 4.0 Internazionale</a>.
 
-## prossime features:
-
-1. mettere griglia di importanti indicatori per finanziamento
-  2. TAEG
-  4. costi di inizio pratica
-2. ammoratamento tedesco e restituzione unica
-3. ottimizzazione performance tramite reactive dentro server
-4. mettere serie storica tassi completa 
-
-## License
-
-
-
-
+## References:
